# mft

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  azure-pipelines.yml
.github/: dependabot.yml
.github/workflows/: release.yml  test.yml
examples/: parse_entry.rs  serialized_structs.rs
samples/: entry_102130_fixup_issue  entry_data_run_at_offset  entry_multiple_index_root_entries  entry_single_file  third_header_good
src/: attr_x10.rs  attr_x30.rs  attribute.rs  csv.rs  entry.rs  enumerator.rs  err.rs  errors.rs  lib.rs  macros.rs  main.rs  mft.rs  utils.rs
src/attribute/: data_run.rs  header.rs  mod.rs  non_resident_attr.rs  raw.rs  x10.rs  x20.rs  x30.rs  x40.rs  x80.rs  x90.rs
src/benches/: benchmark.rs
src/tests/: fixtures.rs  mod.rs
testdata/: attribute_nonresident_001  attribute_nonresident_002  attribute_resident_001  entry_long_name_and_res_ads_002  entry_super_long_name_001
tests/: fixtures.rs  test_cli.rs  test_cli_interactive.rs  test_data_run.rs  test_entry.rs
