[package]
name = "mft"
description = "A Fast (and safe) parser for the Windows Master File Table (MFT) format"
homepage = "https://github.com/omerbenamram/mft"
repository = "https://github.com/omerbenamram/mft"
license = "MIT/Apache-2.0"
readme = "README.md"

version = "0.4.5-alpha.0"
authors = ["Omer Ben-Amram <omerbenamram@gmail.com>"]
edition = "2018"

[dependencies]
log = {version = "^0.4", features=["release_max_level_debug"]}
clap = "2.33.0"
encoding = "0.2.33"
byteorder = "1.3.1"
bitflags = "1.0.4"
serde = {version = "1.0.91", features = ["derive"]}
serde_json = "1.0.39"
csv = "1.0.7"
snafu = {version="0.5.0", features = ["backtraces", "rust_1_30"]}
num-traits = "0.2"
num-derive = "0.2"
winstructs = "0.2.0"
lru = "0.3.0"
itertools = "0.8.0"
rand = "0.7.0"

# `mft_dump` dependencies
simplelog = "0.7.1"
dialoguer = "0.4.0"
indoc = "0.3"

[dependencies.chrono]
version = "0.4.6"
features = ["serde"]

[dev-dependencies]
criterion = "0.3"
skeptic = "0.13"
assert_cmd = "0.11"
predicates = "1"
env_logger = "0.7.0"
tempfile = "3"

# rexpect relies on unix process semantics, but it's only used for process interaction tests.
[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
rexpect = "0.3"

[build-dependencies]
skeptic = "0.13"

[[bin]]
name = "mft_dump"

[[bench]]
name = "benchmark"
path = "./src/benches/benchmark.rs"
harness = false
